# Fit-Check-B2

./: .env.example  .gitignore  Fit-Check-PRD.md  Makefile  NOTICE.md  README.md  compose.yaml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: eslint.config.mjs  package.json
apps/web/app/: globals.css  (+2 more)
docs/: demo-runbook.md  provider-spike.md  real-app-readiness.md  submission-checklist.md
services/api/: README.md  alembic.ini  pyproject.toml  test_genblaze.py
services/api/app/: __init__.py  main.py
services/api/app/api/v1/: __init__.py  router.py
services/api/app/core/: __init__.py  config.py  errors.py
services/api/app/db/: __init__.py  models.py  session.py
services/api/app/db/migrations/: env.py
services/api/app/db/migrations/versions/: 0001_milestone_zero.py
services/api/app/domain/: __init__.py  enums.py  schemas.py
services/api/app/providers/: __init__.py  contracts.py  factory.py  gmi.py  mock.py
services/api/app/scripts/: __init__.py  gmi_smoke_test.py
services/api/app/services/: __init__.py  image_processing.py  object_keys.py  provenance.py  storage.py  task_queue.py  vision.py  weather.py
services/api/app/workflows/: __init__.py  milestone_four.py  milestone_one.py  milestone_three.py  milestone_two.py  milestone_zero.py
services/api/tests/: test_api.py  test_gmi_retries.py  test_image_processing.py  test_milestone_four_api.py  test_milestone_one_api.py  test_milestone_three_api.py  test_milestone_two_api.py  test_milestone_zero_workflow.py  test_object_keys.py  test_provenance.py  test_settings.py
(+6 files in other folders)
