[project]
name = "fit-check-api"
version = "0.1.0"
description = "FastAPI and Genblaze orchestration service for Fit Check"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.21,<1",
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "boto3>=1.36,<2",
  "fastapi>=0.115,<1",
  "genblaze-core>=0.3.6,<0.4",
  "genblaze-gmicloud>=0.3.2,<0.4",
  "genblaze-s3>=0.3,<0.4",
  "httpx>=0.28,<1",
  "pillow>=11,<12",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "tenacity>=9,<10",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# FastAPI's standard dependency-injection syntax intentionally uses Depends(...)
# in endpoint defaults.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
exclude = ["app/db/migrations"]

[[tool.mypy.overrides]]
module = [
  "boto3",
  "botocore.*",
  "PIL",
  "PIL.*",
  "genblaze_core",
  "genblaze_core.*",
  "genblaze_gmicloud",
  "genblaze_gmicloud.*",
  "genblaze_s3",
  "genblaze_s3.*",
]
ignore_missing_imports = true
